# photokiller

./: .dockerignore  .gitignore  BUILD_RASPBERRY_PI.md  INSTALL.md  Makefile  README.md  build_appimage.py  flake.nix  main.py  prereq-cups.sh  pyproject.toml
app/: __main__.py  config.py  main.py
app/capture/: __init__.py  dslr.py  dslr_old.py  webcam.py
app/compose/: layouts.py
app/gpio/: buttons.py
app/print/: cups_print.py
app/ui/: main_window.py  preview_widget.py
app/utils/: paths.py
